--- a/fig.yml
+++ b/fig.yml
@@ -10,6 +10,7 @@ app:
     links:
      - redisAuth:redis_auth
      - redisNotifications:redis_notifications
+     - redisOnlineList:redis_onlinelist
     environment:
      - "TESTUSER_AUTH_TOKEN=DFDE4BBE-1F43-4EF0-9642-775C05336507"
      - "API_SECRET=BE295A7D-C10F-4448-9198-D5AB142E7546"
@@ -21,6 +22,11 @@ redisAuth:
      - "REDIS_PASS=**None**"
 
 redisNotifications:
+    image: tutum/redis:latest
+    environment:
+     - "REDIS_PASS=**None**"
+
+redisOnlineList:
     image: tutum/redis:latest
     environment:
      - "REDIS_PASS=**None**"
