--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "coffeelint": "^1.6.1",
     "concat-stream": "^1.4.7",
     "eslint": "^0.10.0",
+    "newrelic": "^1.20.2",
     "forever": "^0.13.0",
     "ganomede": "^0.2.0",
     "jshint": "^2.5.10",
