--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "coffeelint": "^1.6.1",
     "concat-stream": "^1.4.7",
     "eslint": "^0.10.0",
-    "newrelic": "^1.20.2",
     "forever": "^0.13.0",
     "ganomede": "^0.2.0",
+    "ganomede-helpers": "^0.4.1",
     "jshint": "^2.5.10",
     "mocha": "^2.0.1",
+    "newrelic": "^1.20.2",
     "redis": "^0.12.1",
     "restify": "^2.8.3",
     "vasync": "^1.6.2"
