notifications-api now calls specified addPushNotification() function with notifications that contain `.push`

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "expect.js": "^0.3.1",
     "fakeredis": "^0.3.0",
+    "sinon": "^1.15.4",
     "supertest": "^0.15.0"
   }
 }
