--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Jean-Christophe Hoelt <hoelt@fovea.cc>",
   "license": "Private",
   "dependencies": {
+    "apn": "^1.7.4",
     "authdb": "^0.2.0",
     "blanket": "^1.1.6",
     "bunyan": "^1.2.3",
