--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "coffeelint": "^1.6.1",
     "concat-stream": "^1.4.7",
     "eslint": "^0.10.0",
+    "forever": "^0.14.2",
     "ganomede": "^0.2.0",
     "ganomede-helpers": "^0.4.1",
     "jshint": "^2.5.10",
