--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jshint": "^2.5.10",
     "mocha": "^2.0.1",
     "newrelic": "^1.20.2",
+    "node-gcm": "^0.12.0",
     "redis": "^0.12.1",
     "restify": "^2.8.3",
     "vasync": "^1.6.2"
