--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ganomede": "^0.2.0",
     "ganomede-helpers": "^0.4.1",
     "jshint": "^2.5.10",
+    "lodash": "^3.10.1",
     "mocha": "^2.0.1",
     "newrelic": "^1.20.2",
     "node-gcm": "^0.12.0",
