--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 app:
     build: .
     volumes:
-     - src:/home/app/code/src
-     - tests:/home/app/code/tests
-     - doc:/home/app/code/doc
+     - ./src:/home/app/code/src
+     - ./tests:/home/app/code/tests
+     - ./doc:/home/app/code/doc
     command: make run
     ports:
      - "8000:8000"
