--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     }
   },
   "devDependencies": {
+    "async": "^2.1.2",
     "expect.js": "^0.3.1",
     "fakeredis": "^0.3.0",
     "sinon": "^1.15.4",
