--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 app:
     build: .
     volumes:
+     - ./index.js:/home/app/code/index.js
+     - ./config.js:/home/app/code/config.js
      - ./src:/home/app/code/src
      - ./tests:/home/app/code/tests
      - ./doc:/home/app/code/doc
