--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node build/index.js",
-    "test": "API_SECRET=1 ts-mocha -p tsconfig.json -u tdd --timeout 999999 --colors tests/**/test-*.ts | bunyan -o short --color",
-    "test-": "API_SECRET=1 ts-mocha tests/**/test-queue.ts",
-    "testw": "API_SECRET=1 ts-mocha --watch tests/**/test-*.ts | bunyan -o short --color",
+    "test": " API_SECRET=1 ts-mocha -p tsconfig.json -u tdd --colors tests/**/test-*.ts | bunyan -o short --color",
+    "testw": "API_SECRET=1 ts-mocha -p tsconfig.json -u tdd --colors --watch --watch-extensions ts,js tests/**/test-*.ts | bunyan -o short --color -l fatal",
     "build": "tsc",
     "buildw": "tsc -w"
   },
